Added fraser health

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <!-- Card 3 -->
             <article class="card">
-                <a href="caseit.html" class="thumb-link" aria-label="Goodreads project">
+                <a href="fh.html" class="thumb-link" aria-label="Goodreads project">
                     <div class="thumb">
                         <img src="images/fraserhealth_cover.png" alt="Visualizations thumbnail">
                     </div>
@@ -105,8 +105,7 @@
                     <div class="tags"><span>Project Management</span><span>Design Lead</span><span>Creative Strategy</span></div>
                 </div>
             </article>
-
-
+        
             <!-- Card 1 -->
             <article class="card">
                 <a href="va.html" class="thumb-link" aria-label="Goodreads project">
